--- a/index.html
+++ b/index.html
@@ -4,45 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ноутбуки — главная</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
     <link href="css/mdb.min.css" rel="stylesheet"/>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <script src="js/bootstrap.bundle.min.js"></script>
     <style>
-        /* Минимальные пользовательские стили для сохранения вашего дизайна */
         body {
             background-color: #fff;
             font-family: Arial, sans-serif;
         }
-        
-        /* Градиент для карточек, чтобы было как в оригинале */
         .custom-gradient {
             background: linear-gradient(180deg, #fafafa, #f5f5f7);
         }
-
-        /* Фикс для высоты картинок в галерее, чтобы они были ровными */
         .gallery-img-tall {
             height: 100%;
-            min-height: 400px; /* Минимальная высота для мобилок */
-            object-fit: cover; /* Чтобы картинка не сплющилась */
+            min-height: 400px; 
+            object-fit: cover; 
         }
         .gallery-img-mid {
             height: 200px;
             object-fit: cover;
         }
-
-        /* Стилизация карточек */
         .laptop-card {
             border: 1px solid #d2d2d7;
             border-radius: 8px;
             transition: transform 0.3s;
         }
         .laptop-card:hover {
-            transform: translateY(-5px); /* Легкое всплытие при наведении */
+            transform: translateY(-5px);
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
         }
 
-        /* Адаптация текста */
         .card-text-small {
             font-size: 0.9rem;
             color: #333;
@@ -98,9 +89,6 @@
                     <img src="images/XPS_13.jpg" class="w-100 gallery-img-mid" alt="XPS 13">
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
-                            <div class="d-flex justify-content-center align-items-center h-100">
-                                <p class="text-white mb-0 fw-bold">XPS 13</p>
-                            </div>
                         </div>
                     </a>
                 </div>
@@ -193,7 +181,7 @@
             <div class="col-lg-6 col-md-12">
                 <div class="p-4 border rounded-4 custom-gradient shadow-sm">
                     <h2 class="text-center mb-3">MacBook Pro M4</h2>
-                    <p class="card-text-small text-justify">Модель сочетает базовый чип M4, быструю LPDDR5‑память и 120 Гц экран. Плавный интерфейс для IDE и браузера. Вес 1,55 кг, батарея 72,4 Вт⋅ч. Цена от $1599.</p>
+                    <p class="card-text-small text-justify">Модель сочетает базовый чип M4, быструю LPDDR5‑память и 120 Гц экран, что делает интерфейс и прокрутку плавными и комфортными при работе IDE/браузера, монтаже и графике начально‑среднего уровня. При весе 1,55 кг и батарее 72,4 Вт⋅ч ноутбук рассчитан на длительную работу без розетки и мобильное использование. Базовая конфигурация поставляется с 16 ГБ унифицированной памяти и SSD 512 ГБ по цене $1599.</p>
                     <div class="text-center my-3">
                         <img src="images/Macbook_Pro.png" class="img-fluid rounded" style="max-height: 250px;" alt="Macbook Pro">
                     </div>
@@ -219,7 +207,6 @@
         <p class="m-0 text-muted">© 2025 • Б9123-09.03.04(5) • Юрьев А.П.</p>
     </footer>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 </html>
